# ProgSynth

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  mypy.ini  pyproject.toml  run_exp_bv.sh  run_exp_deepcoder.sh  run_exp_enumeration.sh  run_exp_string.sh
.github/workflows/: docs_publish.yaml  tests.yaml
docs/: about.html  contributing.html  examples.html  examples_pbe.html  genindex.html  grammars.html  index.html  introduction.html  license.html  objects.inv  prediction.html  search.html  searchindex.js  sharpening.html  tutorial.html  type_system.html  usage.html
docs/_sources/: introduction.md.txt  license.md.txt  prediction.md.txt  tutorial.md.txt
docs/source/: conf.py  contributing.rst  examples_pbe.md  grammars.md  index.rst  installation.rst  introduction.md  introduction.rst  license.rst  prediction.md  pruning.md  sharpening.md  tutorial.md  tutorial.rst  type_system.md  usage.rst
examples/: README.md  compare_enumeration.py  plot_enumeration_results.py  plot_helper.py  plot_results.py  plot_solve_results.py
examples/deepcoder/: convert_deepcoder.py  deepcoder.py  pcfg_prediction.py
examples/dreamcoder/: convert_dreamcoder.py  dreamcoder.py
examples/nlp/: README.md  dataset_explorer.py  human.json  train_bert.py
examples/pbe/: README.md  dsl_loader.py  (+23 more)
experiments/: deepcoder.sh  test_performance.sh
synth/: __init__.py  specification.py  task.py  utils.py
tests/: test_init.py  test_task.py  test_utils.py  test_vose.py
tools/: README.md
website/: search.html  sharpening.html  tutorial.html  type_system.html
(+260 files in other folders)
