[tool.poetry]
name = "synth"
version = "0.1.0"
description = "Automated Synthesis Framework"
authors = ["Théo Matricon <theomatricon@gmail.com>", "Nathanaël Fijalkow <nathanael.fijalkow@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanael-fijalkow/AutoSynth"

[tool.poetry.dependencies]
python = ">=3.7.1"
torch = ">=1.9.0"
cython = ">=0.29"
numpy = ">=1.18"
vose = { git = "https://github.com/Theomat/vose.git"}
colorama = ">=0.4.4"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pytest = ">=6.2"
mypy = ">=0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"