[tool.poetry]
name = "synth"
version = "0.1.0"
description = "Automated Synthesis Framework"
authors = ["Théo Matricon <theomatricon@gmail.com>", "Nathanaël Fijalkow <nathanael.fijalkow@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanael-fijalkow/AutoSynth"

[tool.poetry.dependencies]
python = ">=3.8"
torch = ">=1.13.1"
tensorboard = ">=0"
cython = ">=0.29"
numpy = ">=1.22"
vose = { git = "https://github.com/Theomat/vose.git"}
colorama = ">=0.4.4"
tqdm = ">=4.63.0"
matplotlib = ">=3.5.1"
pltpublish = ">=0.1.0"

[tool.poetry.dev-dependencies]
ruff = ">= 0.4.3"
pytest = ">=7.2.0"
mypy = ">=0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"